# team-mood-tracker

./: .gitignore  .pip-audit-ignore  .pre-commit-config.yaml  README.md  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
frontend/: __init__.py  app.py
src/: __init__.py  crud.py  database.py  main.py  models.py
src/routes/: __init__.py  moods.py  stats.py
tests/: __init__.py  conftest.py  test_moods.py  test_stats.py
