[tool.poetry]
name = "team-mood-tracker"
version = "0.1.0"
description = "A lightweight internal tool for agile teams to monitor collective well-being."
authors = ["Team"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
starlette = ">=0.49.1"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
streamlit = "^1.40.0"
matplotlib = "^3.9.0"
pandas = "^2.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
mypy = "^1.11.0"
black = ">=26.3.1"
ruff = "^0.6.0"
bandit = { extras = ["toml"], version = "^1.7.0" }
radon = "^6.0.0"
interrogate = "^1.7.0"
pip-audit = "^2.7.0"
locust = "^2.31.0"
pre-commit = "^4.0.0"
types-requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["frontend/"]

[tool.bandit]
exclude_dirs = ["tests", "frontend"]
skips = []

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-setters = false
fail-under = 100
verbose = 2
exclude = ["tests", "frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
